--- a/caliopen_website/locale/fr/LC_MESSAGES/caliopen_website.po
+++ b/caliopen_website/locale/fr/LC_MESSAGES/caliopen_website.po
@@ -361,7 +361,7 @@ msgid "Lire"
 msgstr "Lire"
 
 #: caliopen_website/templates/layout/tour.jinja2:56
-msgid "De nombreuses fonctionnalités avancées sont mises à votre disposition au sein de notre solution. Échangez simplement et sereinement avec votre entourage, et découvrez des possibilités multiples qui sont le fruit d'une longue réflexion et qui désormais vous faciliterons la vie."
+msgid "De nombreuses fonctionnalités avancées sont mises à votre disposition au sein de notre solution. Échangez simplement et sereinement avec votre entourage, et découvrez des possibilités multiples qui sont le fruit d'une longue réflexion et qui désormais vous faciliteront la vie."
 msgstr "Les principales fonctionnalités de l'interface utilisateur de CaliOpen."
 
 #: caliopen_website/templates/layout/tour.jinja2:59
