--- a/caliopen_website/locale/lv/LC_MESSAGES/caliopen_website.po
+++ b/caliopen_website/locale/lv/LC_MESSAGES/caliopen_website.po
@@ -358,7 +358,7 @@ msgid "Lire"
 msgstr "Read more"
 
 #: caliopen_website/templates/layout/tour.jinja2:56
-msgid "De nombreuses fonctionnalités avancées sont mises à votre disposition au sein de notre solution. Échangez simplement et sereinement avec votre entourage, et découvrez des possibilités multiples qui sont le fruit d'une longue réflexion et qui désormais vous faciliterons la vie."
+msgid "De nombreuses fonctionnalités avancées sont mises à votre disposition au sein de notre solution. Échangez simplement et sereinement avec votre entourage, et découvrez des possibilités multiples qui sont le fruit d'une longue réflexion et qui désormais vous faciliteront la vie."
 msgstr "The main features of the CaliOpen user interface."
 
 #: caliopen_website/templates/layout/tour.jinja2:59
